--- a/src/Components/Slider/Slider.css
+++ b/src/Components/Slider/Slider.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Shippori+Antique&display=swap');
+.image {
+    width: 100vw;
+  }
 
-h2{
-    color: rgb(219, 213, 213);
-    font-weight: 400;
-    font-family: 'Shippori Antique', sans-serif;
-}
+
+
+  
