--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  background-color: #414040;
+  background-color: #1B2838;
   padding: 3rem 0;
   color: #fff;
 }
