--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,35 +1,41 @@
-*{
-    
-    list-style: none;
-}
-@import url('https://fonts.googleapis.com/css2?family=Shippori+Antique&display=swap');
-
-.navbar{
-    background-color: #171a21;
-    padding: 11px;
-    display: flex;
-    justify-content: left;
-    align-items: center;
+.navbar {
+  background-color: #171a21;;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
-.logo{
-    width: 160px;
-    margin: 0px 10px 0px 0px;
-    padding: 20px 0px 0px;
+.navbar__logo {
+  padding: 1.2rem ;
 }
 
-
-.menus{
-    font-family: 'Shippori Antique', sans-serif;
-    color: #B8B6B4;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    font-size: 14px;
-    
+.navbar__image {
+  width: 7rem;
+  margin: 0 2rem;
+  padding-top: 20px;
 }
 
-.menus li{
-    margin: 0rem 1rem;
+.navbar__links__list {
+  display: flex;
+  list-style: none;
+}
 
+.items {
+  text-decoration: none;
+  color: #b8b6b4;
+  font-weight: 700;
+  padding: 0 1rem;
+  font-size: 0.9rem;
+  display: flex;
+  align-items: center;
+}
+
+.text {
+  padding: 0 0.2rem;
+}
+
+.items:hover {
+  color: #ffffff;
+  cursor: pointer;
+  transition: all 200ms ease;
 }
