--- a/src/Components/Container/Container.css
+++ b/src/Components/Container/Container.css
@@ -1,10 +1,10 @@
 .container-title {
   display: flex;
+  align-items: center;
   justify-content: center;
   padding: 2rem 0 0 0;
   font-size: 14px;
   color: #fff;
-  background-color: #1B2838;
 }
 
 .container-cards {
@@ -13,5 +13,8 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  background-color: #1B2838;
+}
+
+.container-div{
+  background-color: #1a1a1a;
 }
