--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -3,9 +3,13 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  background-color: #1B2838;
-  padding: 3rem 0;
+  background-color: #1a1a1a;
+  padding: 2rem 0;
   color: #fff;
+}
+
+.footer span{
+  font-size: 0.5rem;
 }
 
 .social {
