--- a/src/Components/Slider/Slider.css
+++ b/src/Components/Slider/Slider.css
@@ -1,9 +1,71 @@
-.image {
-    width: 100%;
-    height: 45vw;
-    display: block;
+@import url('https://fonts.googleapis.com/css2?family=Shippori+Antique&display=swap');
+
+h2{
+    color: rgb(219, 213, 213);
+    font-weight: 400;
+    font-family: 'Shippori Antique', sans-serif;
 }
 
+img{
+    width: 100vw;
+}
+
+.bar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+span{
+    font-family: 'Shippori Antique0', sans-serif;
+    font-weight: 100;
+    margin: 0 1rem;
+    font-weight: bold;
+}
+
+.mais{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #231F20;
+    color: white;
+    font-family: 'Shippori Antique', sans-serif;
+    border-radius: 5px;
+    padding: 0.2rem 1rem;
+    margin: 0.08rem;
+}
+
+.mais a{
+    text-decoration: none;
+}
+
+.classification {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.square {
+    font-family: 'Shippori Antique', sans-serif;
+    background-color: #2193D1;
+    height: 2rem;
+    border-radius: 0.8rem;
+    padding: 2rem 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-weight: 700;
+    font-size: 2em;
+    margin: 0 1rem;
+}
+
+.class-text {
+    padding: 0 1rem;
+    width: 12rem;
+    color: #484848;
+    font-size: 0.7em;
+}
 
 
   
